Do not request transform preview update on changing liquify options

These options affect the brush settings only, not what the actual
visual representation is.

BUG:425712